# llm-pretraining-exercises

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  vercel.json
.cursor/rules/: conventions.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-production.yml  deploy.yml  release.yml
deploy/: README.md
deploy/netlify/: README.md  netlify.root.toml
deploy/vercel/: build.sh  index.html
docs/: BRIEF.md  DESIGN.md
src/exercises/01-introductions/: BRIEF.md  CLAUDE.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
src/exercises/01-introductions/tests/: test_web_bundle.py
src/exercises/01-introductions/web/: index.html  s1.html  s2.html  s3.html  s4.html
src/exercises/01-introductions/web/css/: styles.css
src/exercises/01-introductions/web/js/: demo1.js  demo2.js  demo3.js  demo4.js  main.js  utils.js
src/exercises/02-tokenization/: BRIEF.md  CLAUDE.md  README.md  pyproject.toml
src/exercises/02-tokenization/src/tokenization/: __init__.py  __main__.py  ablate.py  bpe_scratch.py  config.py  corpus.py  metrics.py  tokenizer.py  widget.py
src/exercises/02-tokenization/tests/: test_ablate.py  test_bpe_scratch.py  test_metrics.py  test_tokenizer.py
src/exercises/02-tokenization/web/: data.json  index.html
