[project]
name = "exercise-02-tokenization"
version = "0.1.0"
description = "Session 2 — a shared 10k BPE vocabulary balanced across English, Hindi, Telugu, and one more language"
requires-python = ">=3.12"
dependencies = [
  "tokenizers>=0.20",
  "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenization"]
